+jokester (sampai store)

--- a/my-apps/jokester/package.json
+++ b/my-apps/jokester/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "starbase",
+  "name": "jokester",
   "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "aditya pradita",
+  "author": "",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -10,7 +10,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vuex": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
